front-end homepage

--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -35,7 +35,7 @@
     <div class="container-fluid">
       <div class="row justify-content-between align-items-center">
         <div>
-          <img src="{% static 'rsz_logo.png' %}" alt="logo" title="logo">
+          <img src="{% static 'rsz_logo.png' %}" alt="Logo" title="Logo">
           <a class="navbar-brand js-scroll-trigger" href="#page-top">Pur Beurre</a>
         </div>
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -67,7 +67,9 @@
         </div>
         <div class="col-lg-8 align-self-baseline">
           <p class="text-white-75 font-weight-light mb-5">Trouvez un produit de subsitution pour ceux que vous consommez tous les jours</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+          <form>
+            <input type="text" placeholder="Produit" name="Produit">
+            <button>Chercher</button>
         </div>
       </div>
     </div>
