--- a/myapp/templates/account.html
+++ b/myapp/templates/account.html
@@ -14,7 +14,7 @@
 <section>
   <div class="container text-center my-auto">
         <div>
-            <h3>Informations sur mon compte</h3>
+            <h3>A propos du compte</h3>
             <hr>
             <p>Email: {{ user.email }}</p>
         </div>
