--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -32,11 +32,11 @@
       </div>
     </div>
     <div class="row justify-content-around align-items-center">
-      <figure style="text-align: center;">
+      <figure>
         <img src="{% static 'img/colette.jpg' %}" title="Colette" alt="Colette" />
         <figcaption>Colette</figcaption>
       </figure>
-      <figure style="text-align: center;">
+      <figure>
         <img src="{% static 'img/remy.jpg' %}" title="Remy" alt="Remy" />
         <figcaption>Remy</figcaption>
       </figure>
