--- a/myapp/templates/credits.html
+++ b/myapp/templates/credits.html
@@ -20,6 +20,7 @@
         <li>Image de fond par Olenka Kotyk</li>
         <li>Thème Bootstrap : Startbootstrap-creative</li>
         <li>Hébergé sur Heroku</li>
+        <li><a href="http://www.djangoproject.com/"><img src="https://www.djangoproject.com/m/img/badges/djangoproject120x25_grey.gif" border="0" alt="A Django project." title="A Django project." /></a></li>
       </ul>
     </div>
   </div>
