--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -26,6 +26,10 @@
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="{% static 'css/creative.css' %}" rel="stylesheet">
 
+  <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" />
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"> </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 
 <body id="page-top">
@@ -43,26 +47,27 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto my-2 my-lg-0">
             <li class="nav-item">
-              <form>
-                <input type="text" name="Chercher" placeholder="Chercher" id="nav_input" style="margin: 15px;">
+              <form action="{% url 'results' %}" method="get">
+                {% csrf_token %}
+                <input type="text" name="search" placeholder="Chercher" id="nav_input">
               </form>
             </li>
             {% if user.is_authenticated %}
               <li class="nav-item">
-                <a href="{% url 'account' %}"> <img src="{% static 'img/rsz_account.png' %}" title="Mon compte" alt="Mon compte" style="margin: 15px;"></a>
+                <a href="{% url 'account' %}"> <img class="nav_logos" src="{% static 'img/rsz_account.png' %}" title="Mon compte" alt="Mon compte" ></a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'login' %}"> <img src="{% static 'img/rsz_carrot.png' %}" title="Mes aliments" alt="Mes aliments" style="margin: 15px;"></a>
+                <a href="{% url 'login' %}"> <img class="nav_logos" src="{% static 'img/rsz_carrot.png' %}" title="Mes aliments" alt="Mes aliments"></a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'logout' %}"> <img src="{% static 'img/rsz_logout.png' %}" title="Se déconnecter" alt="Se déconnecter" style="margin: 15px;"></a>
+                <a href="{% url 'logout' %}"> <img class="nav_logos" src="{% static 'img/rsz_logout.png' %}" title="Se déconnecter" alt="Se déconnecter"></a>
               </li>
             {% else %}
                 <li class="nav-item">
-                  <a href="{% url 'register' %}"> <img src="{% static 'img/rsz_signup.png' %}" title="S'inscrire" alt="S'inscrire" style="margin: 15px;"></a>
+                  <a href="{% url 'register' %}"> <img class="nav_logos" src="{% static 'img/rsz_signup.png' %}" title="S'inscrire" alt="S'inscrire"></a>
                 </li>
                 <li class="nav-item">
-                  <a href="{% url 'login' %}"> <img src="{% static 'img/rsz_login.png' %}" title="Se connecter" alt="Se connecter" style="margin: 15px;"></a>
+                  <a href="{% url 'login' %}"> <img class="nav_logos" src="{% static 'img/rsz_login.png' %}" title="Se connecter" alt="Se connecter"></a>
                 </li>
             {% endif %}
           </ul>
