--- a/myapp/templates/registration/login.html
+++ b/myapp/templates/registration/login.html
@@ -12,16 +12,16 @@
         <p class="text-white-50 mb-4">Connectez-vous à votre compte</p>
       </div>
     </div>
-    <div class="row justify-content-center">
+    <div class="column justify-content-center">
       <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <div class="form-group text-center">
-          <button class="btn btn-primary btn-xl mt-50" type="submit">Se connecter</button>
-        </div>
-        <div class="text-center">
-          Vous n'avez pas de compte ? <a href="{% url 'register' %}">Inscription</a>
-        </div>
+      <div>
+        <button class="btn btn-primary btn-xl mt-50" type="submit">Se connecter</button>
+      </div>
+      <div>
+        Vous n'avez pas de compte ? <a href="{% url 'register' %}">Inscription</a>
+      </div>
     </div>
   </div>
 </section>
