--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -57,7 +57,7 @@
                 <a href="{% url 'account' %}"> <img class="nav_logos" src="{% static 'img/rsz_account.png' %}" title="Mon compte" alt="Mon compte" ></a>
               </li>
               <li class="nav-item">
-                <a href="{% url 'login' %}"> <img class="nav_logos" src="{% static 'img/rsz_carrot.png' %}" title="Mes aliments" alt="Mes aliments"></a>
+                <a href="{% url 'favs' %}"> <img class="nav_logos" src="{% static 'img/rsz_carrot.png' %}" title="Mes aliments" alt="Mes aliments"></a>
               </li>
               <li class="nav-item">
                 <a href="{% url 'logout' %}"> <img class="nav_logos" src="{% static 'img/rsz_logout.png' %}" title="Se déconnecter" alt="Se déconnecter"></a>
