--- a/mysite/static/css/creative.css
+++ b/mysite/static/css/creative.css
@@ -10876,3 +10876,46 @@ h1.fav_title_error {
   border-radius: 10px;
   background-color: #E8A75D;
 }
+
+@media (max-width: 992px) {
+  .resmenu {
+    margin-left: auto;
+    margin-right: 15px;
+  }
+  .pblogo {
+    margin-left: 15px;
+  }
+  .box_res {
+    flex: 1 0 calc(50% - 80px);
+    height: 400px;
+    margin: 40px;
+    position: relative;
+  }
+  .box_fav {
+    width: 50%;
+    height: 400px;
+    justify-content: space-around;
+    position: relative;
+  }
+}
+
+@media (max-width: 768px) {
+  .box_res {
+    flex: 1 0 calc(100% - 80px);
+    height: 400px;
+    margin: 40px;
+    position: relative;
+  }
+  .box_fav {
+    width: 100%;
+    height: 400px;
+    justify-content: space-around;
+    position: relative;
+  }
+}
+
+@media (min-width: 992px) {
+  .resmenu {
+    display: none;
+  }
+}
